[tool.poetry]
name = "rep"
version = "0.1.0"
description = ""
authors = ["Akhmetov Aslan <lib.ballmerpeak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
DateTime = "^4.3"
bs4 = "^0.0.1"
lxml = "^4.6.2"
telebot = "^0.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
